--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         shortName: "wm-flows",
         specStatus: "unofficial",
         noRecTrack: true,
-        xref: true,
         latestVersion: "https://interledger.github.io/web-monetization-flows/",
         editors: [
             {
@@ -79,15 +78,15 @@
             "dom",
             "ecmascript",
             "encoding",
-            "html",
-            "permissions-policy",
-            "webcryptoapi",
-            "webidl",
-            "request",
-            "infra",
             "fetch",
-            "url",
+            "html",
+            "infra",
             "mimesniff",
+            "permissions-policy",
+            "request",
+            "url",
+            "webcryptoapi",
+            "webidl"
         ],
     };
     </script>
