--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <div data-include="section/introduction.html" data-include-replace="true"></div>
     <div data-include="section/terms.html" data-include-replace="true"></div>
     <div data-include="section/storage.html" data-include-replace="true"></div>
+    <div data-include="section/authentication.html" data-include-replace="true"></div>
     <div data-include="section/connecting-a-wallet.html" data-include-replace="true"></div>
     <div data-include="section/session-flow.html" data-include-replace="true"></div>
     <div data-include="section/algorithms.html" data-include-replace="true"></div>
