--- a/section/authentication.html
+++ b/section/authentication.html
@@ -75,7 +75,7 @@
   </section>
 
   <section data-dfn-for="AuthKeys">
-    <h3>`AuthKeys` dictionary</h3>
+    <h3>The `AuthKeys` dictionary</h3>
     <p>The {{AuthKeys}} dictionary stores the [=Ed25519 key pair=] used for HTTP message signatures.</p>
     <pre class="idl">
     typedef Uint8Array PrivateKeySeed; // 32-octet Ed25519 seed
