--- a/section/connecting-a-wallet.html
+++ b/section/connecting-a-wallet.html
@@ -36,7 +36,7 @@
 
     <p>The user can initiate the wallet setup from the [=setup page=]. The [=setup page=] provides
     UI that lets the user: (1) enter a [=wallet address=]; (2) specify an initial spending budget;
-    (3) optionally enable automatic monthly renewal; and (4) after [=authentication key=] generation,
+    (3) optionally enable automatic monthly renewal; and (4) after authentication {{ Storage/keys }} generation,
     view and copy the newly generated public key so it can be registered with the connected wallet
     for client identification.</p>
 
