reference JWK spec better using ReSpec; and prevent linking error

--- a/section/authentication.html
+++ b/section/authentication.html
@@ -64,8 +64,7 @@
   <section id="public-key-representations">
     <h3>Public key representations</h3>
     <p>
-      A <dfn data-lt="public key JWK|JWK public key">public key JWK</dfn> is <a data-cite="RFC7517">JWK</a> (JSON Web Key)
-      with <a data-cite="RFC8037#section-2">OKP</a> key type.
+      A <dfn data-lt="public key JWK|JWK public key">public key JWK</dfn> is a [[[RFC7517]]] with <a data-cite="RFC8037#section-2">OKP</a> key type.
     </p>
 
     <aside class="example" title="Public key JWK object">
