nit: don't need to manually de-indent code in pre

--- a/section/authentication.html
+++ b/section/authentication.html
@@ -68,13 +68,15 @@
     </p>
 
     <aside class="example" title="Public key JWK object">
-      <pre class="json">{
-  "kid": "randomly-generated-uuid",
-  "x": "base64-url-encoded-public-key",
-  "alg": "EdDSA",
-  "kty": "OKP",
-  "crv": "Ed25519"
-}</pre>
+      <pre class="json">
+        {
+          "kid": "randomly-generated-uuid",
+          "x": "base64-url-encoded-public-key",
+          "alg": "EdDSA",
+          "kty": "OKP",
+          "crv": "Ed25519"
+        }
+      </pre>
     </aside>
 
     <p>
