--- a/section/algorithms.html
+++ b/section/algorithms.html
@@ -243,7 +243,7 @@
       This request is non-interactive: implementations MUST NOT include an {{GrantRequest.interact}} and
       the authorization server will return a {{Grant}} directly if successful.</p>
     <div class="algorithm">
-      When asked to <dfn>send an incoming payment grant request</dfn>, given <a>|websiteWalletAddressDetails:WalletAddressDetails|</a>
+      When asked to <dfn>send an incoming payment grant request</dfn>, given |websiteWalletAddressDetails:WalletAddressDetails|
       perform the following steps.
     <ol>
         <li>
